get operations updated